--- a/event-booking.html
+++ b/event-booking.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book Event</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="shortcut icon" href="public/images/logo.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://npmcdn.com/flatpickr/dist/themes/material_green.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="public/css/style.css">
 </head>
+
 <body>
   <div class="container py-5">
     <h1 class="text-center mb-4">Book Your Event</h1>
@@ -35,7 +38,8 @@
       </div>
       <div class="mb-3">
         <label for="details" class="form-label">Event Details</label>
-        <textarea class="form-control" id="details" rows="3" placeholder="Type of event, number of attendees" required></textarea>
+        <textarea class="form-control" id="details" rows="3" placeholder="Type of event, number of attendees"
+          required></textarea>
       </div>
       <button type="submit" class="btn btn-primary w-100">Confirm Booking</button>
       <div class="mt-3 text-success d-none" id="confirmation">Your booking has been confirmed!</div>
@@ -44,4 +48,5 @@
 
   <script src="public/js/booking.js"></script>
 </body>
+
 </html>
